# SimulationModPackInstaller

./: .gitignore  README.md  generate_manifest.py  package-lock.json  package.json  release_update.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: installer.rs  java.rs  main.rs  manifest.rs  profile.rs
ui/: app.jsx  cmdblock.jsx  cmdblock_textures.js  components.jsx  index.html  panels.jsx  styles.css
