[package]
name = "simulation-installer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simulation-installer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "api-all", "dialog"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking", "json", "stream"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
zip = "0.6"
futures-util = "0.3"
anyhow = "1"
dirs = "5"
which = "4"

[features]
custom-protocol = ["tauri/custom-protocol"]
